--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "b029e21d",
    "metadata": {},
    "outputs": [],
@@ -15,31 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "61457ca4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25.12903645 -67.59741259\n",
-      "25.92017388 11.09532135\n",
-      "26.62509167 74.84233102\n",
-      "-59.98969384 -76.89176677\n",
-      "37.30571269 -61.13376282\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Use the tuple() function to display the latitude and longitude combination\n",
-    "for coordinate in coordinates:\n",
-    "    print(coordinate[0],coordinate[1])"
+    "#for coordinate in coordinates:\n",
+    " #   print(coordinate[0],coordinate[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "de501991",
    "metadata": {},
    "outputs": [],
@@ -49,18 +37,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "c21e186e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cockburn town tc\n",
+      "gat ly\n",
+      "parvatsar in\n",
+      "punta arenas cl\n",
+      "saint george bm\n"
+     ]
+    }
+   ],
    "source": [
     "#Use the tuple() function to display the latitude and longitude combination\n",
-    "\n",
-    "\n",
-    "#for coordinate in coordinates:\n",
-    "  #  print(citipy.nearest_city(coordinate[0],coordinate[1]).city_name,\n",
-    "   #       citipy.nearest_city(coordinate[0],coordinate[1]).country_code)\n",
-    "    "
+    "for coordinate in coordinates:\n",
+    "    print(citipy.nearest_city(coordinate[0],coordinate[1]).city_name,\n",
+    "          citipy.nearest_city(coordinate[0],coordinate[1]).country_code)\n",
+    "\n"
    ]
   },
   {
