--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -2,29 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "3347b2f4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "from citipy import citipy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "72274ecc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<zip at 0x205d70bd748>"
+       "<zip at 0x23b1879e188>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "2b7d0bfd",
    "metadata": {},
    "outputs": [],
@@ -50,12 +51,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "900b580f",
+   "execution_count": 14,
+   "id": "f9202c37",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "614"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pip install citipy"
+    "#Create a list for holding the cities\n",
+    "cities = []\n",
+    "#Identify the nearest city for each coordinate set \n",
+    "for coordinate in coordinates:\n",
+    "    city = citipy.nearest_city(coordinate[0],coordinate[1]).city_name\n",
+    "    \n",
+    "    #If city is unique, add it to the city list\n",
+    "    if city not in cities:\n",
+    "        cities.append(city)\n",
+    "        \n",
+    "#Print the city count to confirm sufficient count\n",
+    "len(cities)"
    ]
   },
   {
