--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "id": "b029e21d",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "id": "61457ca4",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "id": "de501991",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "id": "c21e186e",
    "metadata": {},
    "outputs": [
@@ -63,8 +63,447 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "f5f0d08a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from config import weather_api_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e8110e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Starting URL for Weather Map API call\n",
+    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\"+weather_api_key\n",
+    "print(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffbd1af5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create an endpoint url for a city\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "print(city_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "4bcf7b2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Make a get request for the city weather\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "14a0c88c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city_weather.status_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "0a90dc90",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":801,\"main\":\"Clouds\",\"description\":\"few clouds\",\"icon\":\"02d\"}],\"base\":\"stations\",\"main\":{\"temp\":54.19,\"feels_like\":50.68,\"temp_min\":50.09,\"temp_max\":57.34,\"pressure\":1015,\"humidity\":29},\"visibility\":10000,\"wind\":{\"speed\":17,\"deg\":296,\"gust\":31},\"clouds\":{\"all\":20},\"dt\":1639753506,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1639742882,\"sunset\":1639775581},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Get the text of the \"get\" request\n",
+    "city_weather.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "6c830882",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 801,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'few clouds',\n",
+       "   'icon': '02d'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 54.19,\n",
+       "  'feels_like': 50.68,\n",
+       "  'temp_min': 50.09,\n",
+       "  'temp_max': 57.34,\n",
+       "  'pressure': 1015,\n",
+       "  'humidity': 29},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 17, 'deg': 296, 'gust': 31},\n",
+       " 'clouds': {'all': 20},\n",
+       " 'dt': 1639753506,\n",
+       " 'sys': {'type': 2,\n",
+       "  'id': 2013408,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1639742882,\n",
+       "  'sunset': 1639775581},\n",
+       " 'timezone': -18000,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Get the json of the 'get' request\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "114cca4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City weather found\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create an endpoint url for a city\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "#Make a get request for the city weather\n",
+    "city_weather = requests.get(city_url)\n",
+    "#Report whether response was successful\n",
+    "if city_weather.status_code == 200:\n",
+    "    print(f\"City weather found\")\n",
+    "else:\n",
+    "    print(f\"City weather not found\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "d582225f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City weather not found\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create an endpoint url for a city\n",
+    "city_url = url + \"&q=\" + \"Bston\"\n",
+    "#Make a get request for the city weather\n",
+    "city_weather = requests.get(city_url)\n",
+    "#Report whether response was successful\n",
+    "if city_weather.status_code == 200:\n",
+    "    print(f\"City weather found\")\n",
+    "else:\n",
+    "    print(f\"City weather not found\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87b63eb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(city_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "963d0497",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City weather found\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create an endpoint url for a city\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "#Make a get request for the city weather\n",
+    "city_weather = requests.get(city_url)\n",
+    "#Report whether response was successful\n",
+    "if city_weather.status_code == 200:\n",
+    "    print(f\"City weather found\")\n",
+    "else:\n",
+    "    print(f\"City weather not found\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "c15c3e98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['coord', 'weather', 'base', 'main', 'visibility', 'wind', 'clouds', 'dt', 'sys', 'timezone', 'id', 'name', 'cod'])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city_weather.json().keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "f702c3bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 801,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'few clouds',\n",
+       "   'icon': '02d'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 54.19,\n",
+       "  'feels_like': 50.68,\n",
+       "  'temp_min': 50.09,\n",
+       "  'temp_max': 57.34,\n",
+       "  'pressure': 1015,\n",
+       "  'humidity': 29},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 17, 'deg': 296, 'gust': 31},\n",
+       " 'clouds': {'all': 20},\n",
+       " 'dt': 1639753506,\n",
+       " 'sys': {'type': 2,\n",
+       "  'id': 2013408,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1639742882,\n",
+       "  'sunset': 1639775581},\n",
+       " 'timezone': -18000,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Create an endpoint URL for a city\n",
+    "city_url=url + \"&q=\" +\"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "57dd55f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boston_data = city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "4e97d492",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'US'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boston_data[\"sys\"][\"country\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "83802fcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1639753506"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boston_data[\"dt\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "ddc1bb5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.3584 -71.0598 57.34 29 {'all': 20} {'speed': 17, 'deg': 296, 'gust': 31}\n"
+     ]
+    }
+   ],
+   "source": [
+    "city = boston_data[\"name\"]\n",
+    "country = boston_data[\"sys\"][\"country\"]\n",
+    "date = boston_data[\"dt\"]\n",
+    "lat = boston_data[\"coord\"][\"lat\"]\n",
+    "lng = boston_data[\"coord\"][\"lon\"]\n",
+    "temp_max = boston_data[\"main\"][\"temp_max\"]\n",
+    "temp_min = boston_data[\"main\"][\"temp_min\"]\n",
+    "humidity = boston_data[\"main\"][\"humidity\"]\n",
+    "clouds = boston_data[\"clouds\"]\n",
+    "wind = boston_data[\"wind\"]\n",
+    "print(lat,lng,temp_max,humidity,clouds,wind)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "79e7f782",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2021, 12, 17, 15, 5, 6)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Import the datetime module from the datatime library\n",
+    "from datetime import datetime\n",
+    "#Get the date from the JSON file (done above already in date)\n",
+    "#Convert the UTC date to a date format with year, month, day, hours, minutes, seconds\n",
+    "datetime.utcfromtimestamp(date)\n",
+    "#Note that this is GMT (London) time and not local time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "f28102d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2021-12-17 15:05:06'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.utcfromtimestamp(date).strftime('%Y-%m-%d %H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cc0eeae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9006e66",
    "metadata": {},
    "outputs": [],
    "source": []
