cvs output created

--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "d3d285cc",
+   "id": "5ef38bb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b5b35d8",
+   "id": "53d07e23",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "52039d00",
+   "id": "76fd3a41",
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1520,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "e4758e7d",
+   "id": "4a7132ec",
    "metadata": {},
    "outputs": [
     {
@@ -1540,19 +1540,290 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b126fa4b",
+   "execution_count": 38,
+   "id": "c7aa2b33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Nikolskoye</td>\n",
+       "      <td>59.7035</td>\n",
+       "      <td>30.7861</td>\n",
+       "      <td>31.89</td>\n",
+       "      <td>98</td>\n",
+       "      <td>71</td>\n",
+       "      <td>5.70</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>2021-12-17 18:2137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Rikitea</td>\n",
+       "      <td>-23.1203</td>\n",
+       "      <td>-134.9692</td>\n",
+       "      <td>74.68</td>\n",
+       "      <td>73</td>\n",
+       "      <td>99</td>\n",
+       "      <td>18.03</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>2021-12-17 18:2137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mar Del Plata</td>\n",
+       "      <td>-38.0023</td>\n",
+       "      <td>-57.5575</td>\n",
+       "      <td>68.88</td>\n",
+       "      <td>88</td>\n",
+       "      <td>86</td>\n",
+       "      <td>20.00</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>2021-12-17 18:2026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ribeira Grande</td>\n",
+       "      <td>38.5167</td>\n",
+       "      <td>-28.7000</td>\n",
+       "      <td>59.40</td>\n",
+       "      <td>58</td>\n",
+       "      <td>40</td>\n",
+       "      <td>13.80</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>2021-12-17 18:2138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>East London</td>\n",
+       "      <td>-33.0153</td>\n",
+       "      <td>27.9116</td>\n",
+       "      <td>63.54</td>\n",
+       "      <td>67</td>\n",
+       "      <td>20</td>\n",
+       "      <td>9.22</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>2021-12-17 18:2138</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             City      Lat       Lng  Max Temp  Humidity  Cloudiness  \\\n",
+       "0      Nikolskoye  59.7035   30.7861     31.89        98          71   \n",
+       "1         Rikitea -23.1203 -134.9692     74.68        73          99   \n",
+       "2   Mar Del Plata -38.0023  -57.5575     68.88        88          86   \n",
+       "3  Ribeira Grande  38.5167  -28.7000     59.40        58          40   \n",
+       "4     East London -33.0153   27.9116     63.54        67          20   \n",
+       "\n",
+       "   Wind Speed Country                Date  \n",
+       "0        5.70      RU  2021-12-17 18:2137  \n",
+       "1       18.03      PF  2021-12-17 18:2137  \n",
+       "2       20.00      AR  2021-12-17 18:2026  \n",
+       "3       13.80      PT  2021-12-17 18:2138  \n",
+       "4        9.22      ZA  2021-12-17 18:2138  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Convert the array of dictionaries to a pandas DataFrame\n",
+    "city_data_df = pd.DataFrame(city_data)\n",
+    "city_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "2e6823f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Convert the array of dictionaries to a pandas DataFrame\n",
-    "city_data_df"
+    "new_column_order = [\"City\",\"Country\",\"Date\",\"Lat\",\"Lng\",\"Max Temp\",\"Humidity\",\"Cloudiness\", \"Wind Speed\"]\n",
+    "city_data_df = city_data_df[new_column_order]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "53af3fe7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Nikolskoye</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>2021-12-17 18:2137</td>\n",
+       "      <td>59.7035</td>\n",
+       "      <td>30.7861</td>\n",
+       "      <td>31.89</td>\n",
+       "      <td>98</td>\n",
+       "      <td>71</td>\n",
+       "      <td>5.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Rikitea</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>2021-12-17 18:2137</td>\n",
+       "      <td>-23.1203</td>\n",
+       "      <td>-134.9692</td>\n",
+       "      <td>74.68</td>\n",
+       "      <td>73</td>\n",
+       "      <td>99</td>\n",
+       "      <td>18.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mar Del Plata</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>2021-12-17 18:2026</td>\n",
+       "      <td>-38.0023</td>\n",
+       "      <td>-57.5575</td>\n",
+       "      <td>68.88</td>\n",
+       "      <td>88</td>\n",
+       "      <td>86</td>\n",
+       "      <td>20.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ribeira Grande</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>2021-12-17 18:2138</td>\n",
+       "      <td>38.5167</td>\n",
+       "      <td>-28.7000</td>\n",
+       "      <td>59.40</td>\n",
+       "      <td>58</td>\n",
+       "      <td>40</td>\n",
+       "      <td>13.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>East London</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>2021-12-17 18:2138</td>\n",
+       "      <td>-33.0153</td>\n",
+       "      <td>27.9116</td>\n",
+       "      <td>63.54</td>\n",
+       "      <td>67</td>\n",
+       "      <td>20</td>\n",
+       "      <td>9.22</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             City Country                Date      Lat       Lng  Max Temp  \\\n",
+       "0      Nikolskoye      RU  2021-12-17 18:2137  59.7035   30.7861     31.89   \n",
+       "1         Rikitea      PF  2021-12-17 18:2137 -23.1203 -134.9692     74.68   \n",
+       "2   Mar Del Plata      AR  2021-12-17 18:2026 -38.0023  -57.5575     68.88   \n",
+       "3  Ribeira Grande      PT  2021-12-17 18:2138  38.5167  -28.7000     59.40   \n",
+       "4     East London      ZA  2021-12-17 18:2138 -33.0153   27.9116     63.54   \n",
+       "\n",
+       "   Humidity  Cloudiness  Wind Speed  \n",
+       "0        98          71        5.70  \n",
+       "1        73          99       18.03  \n",
+       "2        88          86       20.00  \n",
+       "3        58          40       13.80  \n",
+       "4        67          20        9.22  "
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "2c10f571",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create the output file (CSV format)\n",
+    "output_data_file = \"weather_data/cities.csv\"\n",
+    "#Export the city data into a csv\n",
+    "city_data_df.to_csv(output_data_file,index_label = \"City_ID\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47e4a74b",
+   "id": "ed7eb90e",
    "metadata": {},
    "outputs": [],
    "source": []
