Scatters vs latitude made

--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffbd1af5",
+   "id": "0021abde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "4bcf7b2e",
+   "id": "5000d9cf",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "14a0c88c",
+   "id": "6005001a",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "0a90dc90",
+   "id": "b6fb6449",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "6c830882",
+   "id": "6967e777",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "114cca4a",
+   "id": "b0bcc62d",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "d582225f",
+   "id": "e1bf1d8d",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87b63eb7",
+   "id": "a3a0a933",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "963d0497",
+   "id": "35be3c89",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "c15c3e98",
+   "id": "35714ad0",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "f702c3bf",
+   "id": "3c5d9a4b",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "57dd55f9",
+   "id": "2ffc7e2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "4e97d492",
+   "id": "e6520fdc",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "83802fcd",
+   "id": "a7cc368f",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "ddc1bb5b",
+   "id": "f101d40a",
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "79e7f782",
+   "id": "5090d8a7",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "f28102d9",
+   "id": "31033c9e",
    "metadata": {},
    "outputs": [
     {
@@ -494,16 +494,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7cc0eeae",
+   "execution_count": 72,
+   "id": "2e6a808f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'12/17/21'"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import time\n",
+    "#Get today's date in seconds\n",
+    "today = time.time()\n",
+    "today = time.strftime('%x')\n",
+    "today"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9006e66",
+   "id": "cce7cfe1",
    "metadata": {},
    "outputs": [],
    "source": []
