ALmost done with 6.4

--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 73,
    "id": "f5f0d08a",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0021abde",
+   "id": "8be1fdb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,8 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "5000d9cf",
+   "execution_count": 75,
+   "id": "8b2df613",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,8 +121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "6005001a",
+   "execution_count": 76,
+   "id": "973d5d80",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "200"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,17 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "b6fb6449",
+   "execution_count": 77,
+   "id": "bf8d7681",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":801,\"main\":\"Clouds\",\"description\":\"few clouds\",\"icon\":\"02d\"}],\"base\":\"stations\",\"main\":{\"temp\":54.19,\"feels_like\":50.68,\"temp_min\":50.09,\"temp_max\":57.34,\"pressure\":1015,\"humidity\":29},\"visibility\":10000,\"wind\":{\"speed\":17,\"deg\":296,\"gust\":31},\"clouds\":{\"all\":20},\"dt\":1639753506,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1639742882,\"sunset\":1639775581},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":802,\"main\":\"Clouds\",\"description\":\"scattered clouds\",\"icon\":\"03n\"}],\"base\":\"stations\",\"main\":{\"temp\":51.6,\"feels_like\":47.91,\"temp_min\":47.44,\"temp_max\":54.05,\"pressure\":1015,\"humidity\":31},\"visibility\":10000,\"wind\":{\"speed\":11.01,\"deg\":13,\"gust\":21},\"clouds\":{\"all\":40},\"dt\":1639778675,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1639742882,\"sunset\":1639775581},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,29 +164,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "6967e777",
+   "execution_count": 78,
+   "id": "01921938",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 801,\n",
+       " 'weather': [{'id': 802,\n",
        "   'main': 'Clouds',\n",
-       "   'description': 'few clouds',\n",
-       "   'icon': '02d'}],\n",
+       "   'description': 'scattered clouds',\n",
+       "   'icon': '03n'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 54.19,\n",
-       "  'feels_like': 50.68,\n",
-       "  'temp_min': 50.09,\n",
-       "  'temp_max': 57.34,\n",
+       " 'main': {'temp': 51.6,\n",
+       "  'feels_like': 47.91,\n",
+       "  'temp_min': 47.44,\n",
+       "  'temp_max': 54.05,\n",
        "  'pressure': 1015,\n",
-       "  'humidity': 29},\n",
+       "  'humidity': 31},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 17, 'deg': 296, 'gust': 31},\n",
-       " 'clouds': {'all': 20},\n",
-       " 'dt': 1639753506,\n",
+       " 'wind': {'speed': 11.01, 'deg': 13, 'gust': 21},\n",
+       " 'clouds': {'all': 40},\n",
+       " 'dt': 1639778675,\n",
        " 'sys': {'type': 2,\n",
        "  'id': 2013408,\n",
        "  'country': 'US',\n",
@@ -198,7 +198,7 @@
        " 'cod': 200}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "b0bcc62d",
+   "id": "86cb2964",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "e1bf1d8d",
+   "id": "db945283",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3a0a933",
+   "id": "8bad6c9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "35be3c89",
+   "id": "6ef3eb34",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "35714ad0",
+   "id": "1b16c1c6",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "3c5d9a4b",
+   "id": "a5b4fe25",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "2ffc7e2e",
+   "id": "a895d494",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "e6520fdc",
+   "id": "ae07bdf6",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "a7cc368f",
+   "id": "0d72f9b5",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "f101d40a",
+   "id": "f30ffb87",
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "5090d8a7",
+   "id": "7f360cc8",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "31033c9e",
+   "id": "5df2080d",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "2e6a808f",
+   "id": "d6d2a235",
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cce7cfe1",
+   "id": "186c2840",
    "metadata": {},
    "outputs": [],
    "source": []
