pop up markers added

--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "id": "77e35ef6",
    "metadata": {
     "scrolled": true
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "id": "aecbb312",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "4     63.54        67          20        9.22  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "id": "f991a719",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "id": "9ef6af47",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "id": "5bb47212",
    "metadata": {},
    "outputs": [],
@@ -214,14 +214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "id": "4ae1545d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20c04cd560784259b4cd139d713d6300",
+       "model_id": "98dd502f263c45bba09ca0f42147e977",
        "version_major": 2,
        "version_minor": 0
       },
@@ -258,14 +258,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "id": "72182bd9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77238317124b4dafb27d88dc942f0007",
+       "model_id": "635a5c02c87c479ebf1bdd24b18928ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -298,14 +298,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "id": "6953326a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f6cab7a3d0e428e877bd12f77885a20",
+       "model_id": "983a235b453b4dc498b18b2d0f8376e3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -338,14 +338,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "id": "96ac7e78",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1f038693d6c4476b0840c12b991d954",
+       "model_id": "75b1dacf03dd49e9b00fa41626e375c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "id": "b5f400d4",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "id": "d0477c51",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
        "36     86.09        90          94        3.40  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "id": "851c3032",
    "metadata": {},
    "outputs": [
@@ -630,7 +630,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "id": "6a91cec2",
    "metadata": {},
    "outputs": [
@@ -783,7 +783,7 @@
        "36  Sao Joao Da Barra      BR     86.09 -21.6403  -41.0511           "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,24 +791,304 @@
    "source": [
     "#Create a dataframe called hotel_df to store hotel names along with city, country, max temp, and coordinates\n",
     "hotel_df = preferred_cities_df[[\"City\", \"Country\", \"Max Temp\", \"Lat\", \"Lng\"]].copy()\n",
+    "\n",
+    "#Add a blank column for hotel name to be filled in later\n",
     "hotel_df[\"Hotel Name\"] = \"\"\n",
+    "\n",
+    "#Show list\n",
     "hotel_df.head(10)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "id": "a709a241",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "\n",
     "#Set parameters to search for a hotel\n",
     "params = {\n",
     "    \"radius\": 5000,\n",
     "    \"type\": \"lodging\",\n",
-    "    \"Key\": g_key\n",
-    "}"
+    "    \"key\": g_key\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "8410c5d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n",
+      "Hotel not found... skipping.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Iterate through the DataFrame\n",
+    "for index, row in hotel_df.iterrows():\n",
+    "    #Get the latitude and longitude\n",
+    "    lat = row[\"Lat\"]\n",
+    "    lng = row[\"Lng\"]\n",
+    "    \n",
+    "    #Add the latitude and longitude to a location key for the params dictionary\n",
+    "    hotel_loc = f\"{lat},{lng}\"\n",
+    "    params['location']= hotel_loc\n",
+    "    \n",
+    "    #Use the search term: \"lodging\" and our latitude and longitude\n",
+    "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "    \n",
+    "    #Make request and get the json data from the search\n",
+    "    hotels = requests.get(base_url,  params = params).json()\n",
+    "    #print(hotels)\n",
+    "    #Grab the first hotel from the list and store the name in the correct row for the blank hotel name column created earlier\n",
+    "    try:\n",
+    "        hotel_df.loc[index,\"Hotel Name\"] = hotels[\"results\"][0][\"name\"]\n",
+    "    except (IndexError):\n",
+    "        print(\"Hotel not found... skipping.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "98b6a37f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Puerto Ayora</td>\n",
+       "      <td>EC</td>\n",
+       "      <td>80.56</td>\n",
+       "      <td>-0.7393</td>\n",
+       "      <td>-90.3518</td>\n",
+       "      <td>Finch Bay Galapagos Hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Hithadhoo</td>\n",
+       "      <td>MV</td>\n",
+       "      <td>82.47</td>\n",
+       "      <td>-0.6000</td>\n",
+       "      <td>73.0833</td>\n",
+       "      <td>Scoop Guest House</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Biak</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>77.02</td>\n",
+       "      <td>-0.9131</td>\n",
+       "      <td>122.8766</td>\n",
+       "      <td>Penginapan Kim</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Atuona</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>77.58</td>\n",
+       "      <td>-9.8000</td>\n",
+       "      <td>-139.0333</td>\n",
+       "      <td>Villa Enata</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Lazaro Cardenas</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>83.98</td>\n",
+       "      <td>17.9583</td>\n",
+       "      <td>-102.2000</td>\n",
+       "      <td>quinta antigua</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>560</th>\n",
+       "      <td>Nacala</td>\n",
+       "      <td>MZ</td>\n",
+       "      <td>80.37</td>\n",
+       "      <td>-14.5428</td>\n",
+       "      <td>40.6728</td>\n",
+       "      <td>Nacala Plaza Business Design Hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>562</th>\n",
+       "      <td>Grand-Santi</td>\n",
+       "      <td>GF</td>\n",
+       "      <td>87.10</td>\n",
+       "      <td>4.2500</td>\n",
+       "      <td>-54.3833</td>\n",
+       "      <td>Hotel La Villa Couacou</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>563</th>\n",
+       "      <td>Moron</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>85.95</td>\n",
+       "      <td>-34.6534</td>\n",
+       "      <td>-58.6198</td>\n",
+       "      <td>Hotel Morón</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>564</th>\n",
+       "      <td>Muisne</td>\n",
+       "      <td>EC</td>\n",
+       "      <td>80.71</td>\n",
+       "      <td>0.6000</td>\n",
+       "      <td>-80.0333</td>\n",
+       "      <td>Quinta Samay</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>568</th>\n",
+       "      <td>Paranaiba</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>81.95</td>\n",
+       "      <td>-19.6772</td>\n",
+       "      <td>-51.1908</td>\n",
+       "      <td>Villa Rica Park Hotel GMR</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>173 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                City Country  Max Temp      Lat       Lng  \\\n",
+       "6       Puerto Ayora      EC     80.56  -0.7393  -90.3518   \n",
+       "8          Hithadhoo      MV     82.47  -0.6000   73.0833   \n",
+       "9               Biak      ID     77.02  -0.9131  122.8766   \n",
+       "17            Atuona      PF     77.58  -9.8000 -139.0333   \n",
+       "21   Lazaro Cardenas      MX     83.98  17.9583 -102.2000   \n",
+       "..               ...     ...       ...      ...       ...   \n",
+       "560           Nacala      MZ     80.37 -14.5428   40.6728   \n",
+       "562      Grand-Santi      GF     87.10   4.2500  -54.3833   \n",
+       "563            Moron      AR     85.95 -34.6534  -58.6198   \n",
+       "564           Muisne      EC     80.71   0.6000  -80.0333   \n",
+       "568        Paranaiba      BR     81.95 -19.6772  -51.1908   \n",
+       "\n",
+       "                             Hotel Name  \n",
+       "6             Finch Bay Galapagos Hotel  \n",
+       "8                     Scoop Guest House  \n",
+       "9                        Penginapan Kim  \n",
+       "17                          Villa Enata  \n",
+       "21                       quinta antigua  \n",
+       "..                                  ...  \n",
+       "560  Nacala Plaza Business Design Hotel  \n",
+       "562              Hotel La Villa Couacou  \n",
+       "563                         Hotel Morón  \n",
+       "564                        Quinta Samay  \n",
+       "568           Villa Rica Park Hotel GMR  \n",
+       "\n",
+       "[173 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hotel_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "91583cf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fa8323a6daf244b98d15748fbbd59b23",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "info_box_template = \"\"\"\n",
+    "<dl>\n",
+    "<dt>Hotel Name</dt><dd>{Hotel Name}</dd>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>Max Temp</dt><dd>{Max Temp} °F</dd>\n",
+    "</dl>\n",
+    "\"\"\"\n",
+    "#store in the DataFrame row\n",
+    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]\n",
+    "\n",
+    "#Add a heatmap of temperature for the vacation spots\n",
+    "locations = hotel_df[[\"Lat\",\"Lng\"]]\n",
+    "max_temp = hotel_df[\"Max Temp\"]\n",
+    "fig = gmaps.figure(center = (30.0, 31.0), zoom_level = 1.5)\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights = max_temp, dissipating = False,\n",
+    "                                max_intensity = 300, point_radius = 4)\n",
+    "marker_layer = gmaps.marker_layer(locations,info_box_content = hotel_info)\n",
+    "fig.add_layer(heat_layer)\n",
+    "fig.add_layer(marker_layer)\n",
+    "#Call the figure to plot the data\n",
+    "fig\n",
+    "\n"
    ]
   },
   {
@@ -817,27 +1097,15 @@
    "id": "8ea04f89",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Heatmap of temperature for preferred cities\n",
-    "#Get the latitude and longitude\n",
-    "locations = preferred_cities_df[[\"Lat\", \"Lng\"]]\n",
-    "\n",
-    "#Get the maximum temperature\n",
-    "max_temp = preferred_cities_df[\"Max Temp\"]\n",
-    "\n",
-    "#Assign the figure variable\n",
-    "fig = gmaps.figure(center=(30.0,31.0), zoom_level = 1.5)\n",
-    "\n",
-    "#Assign the heatmap variable\n",
-    "heat_layer = gmaps.heatmap_layer(locations,weights = [max(temp,0) for temp in max_temp],dissipating = False,\n",
-    "                                max_intensity = 300, point_radius = 4)\n",
-    "\n",
-    "#Add the heatmap layer\n",
-    "fig.add_layer(heat_layer)\n",
-    "\n",
-    "#Call the figure to plot the data\n",
-    "fig"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94b0206d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
